; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_strv.c_strv_extend_n.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_strv.c_strv_extend_n.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @strv_extend_n(i8*** %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8***, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8**, align 8
  store i8*** %0, i8**** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %12 = load i8***, i8**** %5, align 8
  %13 = call i32 @assert(i8*** %12)
  %14 = load i8*, i8** %6, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %88

17:                                               ; preds = %3
  %18 = load i64, i64* %7, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %17
  store i32 0, i32* %4, align 4
  br label %88

21:                                               ; preds = %17
  %22 = load i8***, i8**** %5, align 8
  %23 = load i8**, i8*** %22, align 8
  %24 = call i64 @strv_length(i8** %23)
  store i64 %24, i64* %10, align 8
  %25 = load i8***, i8**** %5, align 8
  %26 = load i8**, i8*** %25, align 8
  %27 = load i64, i64* %10, align 8
  %28 = load i64, i64* %7, align 8
  %29 = add i64 %27, %28
  %30 = add i64 %29, 1
  %31 = call i8** @reallocarray(i8** %26, i64 %30, i32 8)
  store i8** %31, i8*** %11, align 8
  %32 = load i8**, i8*** %11, align 8
  %33 = icmp ne i8** %32, null
  br i1 %33, label %37, label %34

34:                                               ; preds = %21
  %35 = load i32, i32* @ENOMEM, align 4
  %36 = sub nsw i32 0, %35
  store i32 %36, i32* %4, align 4
  br label %88

37:                                               ; preds = %21
  %38 = load i8**, i8*** %11, align 8
  %39 = load i8***, i8**** %5, align 8
  store i8** %38, i8*** %39, align 8
  %40 = load i64, i64* %10, align 8
  store i64 %40, i64* %8, align 8
  br label %41

41:                                               ; preds = %60, %37
  %42 = load i64, i64* %8, align 8
  %43 = load i64, i64* %10, align 8
  %44 = load i64, i64* %7, align 8
  %45 = add i64 %43, %44
  %46 = icmp ult i64 %42, %45
  br i1 %46, label %47, label %63

47:                                               ; preds = %41
  %48 = load i8*, i8** %6, align 8
  %49 = call i8* @strdup(i8* %48)
  %50 = load i8**, i8*** %11, align 8
  %51 = load i64, i64* %8, align 8
  %52 = getelementptr inbounds i8*, i8** %50, i64 %51
  store i8* %49, i8** %52, align 8
  %53 = load i8**, i8*** %11, align 8
  %54 = load i64, i64* %8, align 8
  %55 = getelementptr inbounds i8*, i8** %53, i64 %54
  %56 = load i8*, i8** %55, align 8
  %57 = icmp ne i8* %56, null
  br i1 %57, label %59, label %58

58:                                               ; preds = %47
  br label %67

59:                                               ; preds = %47
  br label %60

60:                                               ; preds = %59
  %61 = load i64, i64* %8, align 8
  %62 = add i64 %61, 1
  store i64 %62, i64* %8, align 8
  br label %41

63:                                               ; preds = %41
  %64 = load i8**, i8*** %11, align 8
  %65 = load i64, i64* %8, align 8
  %66 = getelementptr inbounds i8*, i8** %64, i64 %65
  store i8* null, i8** %66, align 8
  store i32 0, i32* %4, align 4
  br label %88

67:                                               ; preds = %58
  %68 = load i64, i64* %10, align 8
  store i64 %68, i64* %9, align 8
  br label %69

69:                                               ; preds = %79, %67
  %70 = load i64, i64* %9, align 8
  %71 = load i64, i64* %8, align 8
  %72 = icmp ult i64 %70, %71
  br i1 %72, label %73, label %82

73:                                               ; preds = %69
  %74 = load i8**, i8*** %11, align 8
  %75 = load i64, i64* %9, align 8
  %76 = getelementptr inbounds i8*, i8** %74, i64 %75
  %77 = load i8*, i8** %76, align 8
  %78 = call i32 @free(i8* %77)
  br label %79

79:                                               ; preds = %73
  %80 = load i64, i64* %9, align 8
  %81 = add i64 %80, 1
  store i64 %81, i64* %9, align 8
  br label %69

82:                                               ; preds = %69
  %83 = load i8**, i8*** %11, align 8
  %84 = load i64, i64* %10, align 8
  %85 = getelementptr inbounds i8*, i8** %83, i64 %84
  store i8* null, i8** %85, align 8
  %86 = load i32, i32* @ENOMEM, align 4
  %87 = sub nsw i32 0, %86
  store i32 %87, i32* %4, align 4
  br label %88

88:                                               ; preds = %82, %63, %34, %20, %16
  %89 = load i32, i32* %4, align 4
  ret i32 %89
}

declare dso_local i32 @assert(i8***) #1

declare dso_local i64 @strv_length(i8**) #1

declare dso_local i8** @reallocarray(i8**, i64, i32) #1

declare dso_local i8* @strdup(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
